.provarCaches/00D410000011HE0EAM/objects/rstkf__reconciliation__c.object
<CustomObject>
    <description>reconciliation__c</description>
    <fields>
        <fullName>rstkf__reconciliation_bankdate__c</fullName>
        <label>Bank Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__reconciliation_glbanktxn__c</fullName>
        <label>Bank Transaction Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__reconciliation_reconciled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconciled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__reconciliation_reference__c</fullName>
        <label>Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__reconciliation_reportedamt__c</fullName>
        <label>Bank Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__reconciliation_stmtdate__c</fullName>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__reconciliation_trantype__c</fullName>
        <label>Transaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__reconciliation_txndate__c</fullName>
        <label>Txn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__reconciliation_variance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__reconciliation_viewbankamt__c</fullName>
        <label>Bank Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Reconciliation Record</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reconciliation Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reconciliation Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>